--- a/programming/language/vala/pspec.xml
+++ b/programming/language/vala/pspec.xml
@@ -12,7 +12,7 @@
         <License>BSD</License>
         <Summary>A modern programming language for GNOME</Summary>
         <Description>Vala is a new programming language that aims to bring modern programming language features to GNOME developers without imposing any additional runtime requirements and without using a different ABI compared to applications and libraries written in C.</Description>
-        <Archive sha1sum="571e377f6f1ab1e9355fdaaabd092463409bc77e" type="tarbz2">http://download.gnome.org/sources/vala/0.13/vala-0.13.1.tar.bz2</Archive>
+        <Archive sha1sum="e7ac9fa432eedb480827f7664ad1e26f55aaed87" type="tarxz">http://download.gnome.org/sources/vala/0.17/vala-0.17.4.tar.xz</Archive>
     </Source>
 
     <Package>
@@ -52,12 +52,21 @@
         <Files>
             <Path fileType="header">/usr/include</Path>
             <Path fileType="data">/usr/lib/pkgconfig</Path>
-            <Path fileType="data">/usr/share/aclocal/vala.m4</Path>
+            <Path fileType="data">/usr/share/pkgconfig</Path>
+            <Path fileType="data">/usr/share/aclocal</Path>
+            <Path fileType="data">/usr/share/vala/Makefile.vapigen</Path>
             <Path fileType="man">/usr/share/man/man3</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2012-08-09</Date>
+            <Version>0.17.4</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2011-08-10</Date>
             <Version>0.13.1</Version>
