--- a/programming/language/ocaml/ocaml/pspec.xml
+++ b/programming/language/ocaml/ocaml/pspec.xml
@@ -18,7 +18,7 @@
         Error: Files /usr/lib/ocaml/facile/facile.cmxa and /usr/lib/ocaml/stdlib.cmxa
                make inconsistent assumptions over implementation Printf
         -->
-        <Archive sha1sum="33ebbfb1115806f117808f37e40d206c8994943d" type="tarbz2">http://caml.inria.fr/pub/distrib/ocaml-3.12/ocaml-3.12.0.tar.bz2</Archive>
+        <Archive sha1sum="22c0ae84c0049e75ec1577d5c1a26c293bb740b3" type="tarbz2">http://caml.inria.fr/pub/distrib/ocaml-4.00/ocaml-4.00.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>tcl-devel</Dependency>
             <Dependency>tcltk-devel</Dependency>
@@ -26,9 +26,11 @@
             <Dependency>emacs</Dependency>
         </BuildDependencies>
         <Patches>
-          <Patch level="1">ocaml-3.12.0-rpath.patch</Patch>
-          <Patch level="1">020_all_configure.patch</Patch>
-          <Patch level="1">ocaml-3.12.0-handle-tk-8.6.patch</Patch>
+	  <Patch level="1">fedora/0001-Add-.gitignore-file-to-ignore-generated-files.patch</Patch>
+	  <Patch level="1">fedora/0002-Ensure-empty-compilerlibs-directory-is-created-by-gi.patch</Patch>
+	  <Patch level="1">fedora/0003-ocamlbyteinfo-ocamlplugininfo-Useful-utilities-from-.patch</Patch>
+	  <Patch level="1">fedora/0004-Don-t-add-rpaths-to-libraries.patch</Patch>
+	  <Patch level="1">fedora/0005-configure-Allow-user-defined-C-compiler-flags.patch</Patch>
         </Patches>
     </Source>
 
@@ -42,7 +44,7 @@
         </Files>
     </Package>
 
-    <Package>
+    <!--Package>
         <Name>ocaml-mode</Name>
         <IsA>data</IsA>
         <PartOf>editor.emacs</PartOf>
@@ -57,7 +59,7 @@
         <AdditionalFiles>
             <AdditionalFile permission="0644" target="/etc/emacs/site-lisp/80-ocaml-mode.el">80-ocaml-mode.el</AdditionalFile>
         </AdditionalFiles>
-    </Package>
+    </Package-->
 
     <Package>
         <Name>labltk</Name>
@@ -78,6 +80,13 @@
 
 
     <History>
+         <Update release="13">
+            <Date>2012-09-20</Date>
+            <Version>4.00.0</Version>
+            <Comment>Bump</Comment>
+            <Name>Serdar Soytetir</Name>
+            <Email>tulliana@gmail.com</Email>
+        </Update>
         <Update release="12">
             <Date>2011-06-14</Date>
             <Version>3.12.0</Version>
