--- a/README
+++ b/README
@@ -1,8 +1,5 @@
-Pardus package repository
--------------------------
+Pardus ANKA Package Repository
+------------------------------
 
-This is a clone of the current pardus/2011/devel Subversion
-repository. The repository is migrated to GIT using svn2git
-with correct author informations.
-
-For more information please visit: http://www.pardus.org.tr/en
+This is a clone of Pardus-Linux PiSi packages repository for
+Pardus ANKA.
