--- a/programming/language/python/cython/pspec.xml
+++ b/programming/language/python/cython/pspec.xml
@@ -5,15 +5,15 @@
         <Name>cython</Name>
         <Homepage>http://www.cython.org</Homepage>
         <Packager>
-            <Name>Pardus ANKA Admins</Name>
-            <Email>pisiciftligi@pardus-linux.org</Email>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
         </Packager>
         <License>Apache-2.0</License>
         <IsA>app:console</IsA>
         <IsA>library</IsA>
         <Summary>C extensions for the Python</Summary>
         <Description>Cython is a language that makes writing C extensions for the Python language as easy as Python itself.</Description>
-        <Archive sha1sum="b91780124a4061a9b77561b9467eaaea9933a799" type="targz">http://www.cython.org/release/Cython-0.15.tar.gz</Archive>
+        <Archive sha1sum="2e6f3b5e8fa036a6152fde3c52cd5606846331af" type="targz">http://www.cython.org/release/Cython-0.17.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2012-09-15</Date>
+            <Version>0.17</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@pardus.org.tr</Email>
+        </Update>
         <Update release="9">
             <Date>2011-08-08</Date>
             <Version>0.15</Version>
