guile version bump

--- a/programming/language/lisp/guile/pspec.xml
+++ b/programming/language/lisp/guile/pspec.xml
@@ -14,12 +14,12 @@
         <IsA>library</IsA>
         <Summary>GNU Scheme interpreter and library</Summary>
         <Description>GUILE (GNU's Ubiquitous Intelligent Language for Extension) is a library implementation of the Scheme programming language, written in C. GUILE provides a machine-independent execution platform that can be linked in as a library during the building of extensible programs.</Description>
-        <Archive sha1sum="24cd2f06439c76d41d982a7384fe8a0fe5313b54" type="targz">mirrors://gnu/guile/guile-1.8.7.tar.gz</Archive>
+        <Archive sha1sum="aee330029ea48160071fdbd09271d80c92498669" type="targz">mirrors://gnu/guile/guile-2.0.6.tar.gz</Archive>
         <Patches>
-            <Patch level="1">as-needed.patch</Patch>
-            <Patch level="1">guile-1.8.7-linemarkers.patch</Patch>
-            <Patch level="1">guile-1.8.7-testsuite2.patch</Patch>
-            <Patch level="1">guile-1.8.7-testsuite.patch</Patch>
+            <!--Patch level="1">as-needed.patch</Patch-->
+            <!--Patch level="1">guile-1.8.7-linemarkers.patch</Patch-->
+            <!--Patch level="1">guile-1.8.7-testsuite2.patch</Patch-->
+            <!--Patch level="1">guile-1.8.7-testsuite.patch</Patch-->
         </Patches>
     </Source>
 
@@ -32,6 +32,7 @@
             <Path fileType="config">/etc</Path>
             <Path fileType="executable">/usr/bin</Path>
             <Path fileType="library">/usr/lib/lib*</Path>
+            <Path fileType="library">/usr/lib/guile/2.0</Path>    
             <Path fileType="data">/usr/share/guile</Path>
             <Path fileType="data">/usr/share/emacs</Path>
             <Path fileType="info">/usr/share/info</Path>
@@ -56,6 +57,13 @@
     </Package>
 
     <History>
+        <Update release="11">
+            <Date>2012-10-03</Date>
+            <Version>2.0.6</Version>
+            <Comment>Mass rebuild for Pardus 2011 Beta</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>      
         <Update release="10">
             <Date>2010-10-13</Date>
             <Version>1.8.7</Version>
