--- a/programming/language/ruby/ruby/pspec.xml
+++ b/programming/language/ruby/ruby/pspec.xml
@@ -12,12 +12,15 @@
         <IsA>app:console</IsA>
         <Summary>An object-oriented scripting language</Summary>
         <Description>Ruby is a dynamic, open source programming language with a focus on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write.</Description>
-         <Archive sha1sum="6ed404f8d9dd33e0d9dbe24e09101a1ee78ed7c3" type="targz">ftp://ftp.ruby-lang.org/pub/ruby/1.8/ruby-1.8.7-p352.tar.gz</Archive>
+         <Archive sha1sum="afb497dc10ea3d83ecbe3ccd9ed45fba1457721c" type="tarbz2">ftp://ftp.ruby-lang.org/pub/ruby/1.9/ruby-1.9.3-p194.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>tcltk-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch>ruby-1.8.6-memory-leak.diff</Patch>
+            <!--<Patch>ruby-1.8.6-memory-leak.diff</Patch>-->
+	    <Patch level="1">004_gfbsd7.patch</Patch>
+	    <Patch level="1">005_no-undefined-ext.patch</Patch>
+	    <Patch level="1">009_no-gems.patch</Patch>
         </Patches>
     </Source>
 
@@ -36,7 +39,25 @@
         </Files>
     </Package>
 
+    <Package>
+        <Name>ruby-devel</Name>
+	<Summary>ruby için geliştirme dosyaları</Summary>
+        <RuntimeDependencies>
+            <Dependency release="current">ruby</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="header">/usr/include</Path>
+        </Files>
+    </Package>
+    
     <History>
+        <Update release="29" type="security">
+            <Date>2012-10-07</Date>
+            <Version>1.9.3</Version>
+            <Comment>Version bump + split package</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="28" type="security">
             <Date>2011-07-11</Date>
             <Version>1.8.7_p352</Version>
