--- a/kernel/kernel/TODO
+++ b/kernel/kernel/TODO
@@ -2,5 +2,7 @@ building with pisi  release="210"
 
 i686 ready
 
-x86-64 config must be revision. its us now "notops" config back
+x86-64 ready 
+
+(maybe little more work)
  
