--- a/programming/language/python/python-nose/pspec.xml
+++ b/programming/language/python/python-nose/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A unittest extension offering automatic test suite discovery and easy test authoring</Summary>
         <Description>python-nose provides an alternate test discovery and running process for unittest, one that is intended to mimic the behavior of py.test as much as is reasonably possible without resorting to too much magic.</Description>
-        <Archive sha1sum="37c03a5b9738575e25ef99a5ca3b021f66c53421" type="targz">http://somethingaboutorange.com/mrl/projects/nose/nose-0.11.3.tar.gz</Archive>
+        <Archive sha1sum="02cc3ffdd7a1ce92cbee388c4a9e939a79f66ba5" type="targz">http://pypi.python.org/packages/source/n/nose/nose-1.2.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="6">
+            <Date>2012-10-13</Date>
+            <Version>1.2.1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-13</Date>
             <Version>0.11.3</Version>
