--- a/programming/language/python/python-numpy/pspec.xml
+++ b/programming/language/python/python-numpy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>The fundamental package needed for scientific computing with Python</Summary>
         <Description>Numpy contains a powerful N-dimensional array object, sophisticated (broadcasting) functions, tools for integrating C/C++ and Fortran code, and useful linear algebra, Fourier transform, and random number capabilities.</Description>
-        <Archive sha1sum="ec6078aa09acbcca3d90f9f36353fc83e7e1daa0" type="targz">mirrors://sourceforge/numpy/numpy-1.4.1.tar.gz</Archive>
+        <Archive sha1sum="c36c471f44cf914abdf37137d158bf3ffa460141" type="targz">mirrors://sourceforge/numpy/numpy-1.6.2.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>blas-devel</Dependency>
             <Dependency>lapack-devel</Dependency>
@@ -21,8 +21,11 @@
         </BuildDependencies>
         <Patches>
             <Patch level="1">numpy-1.0.1-f2py.patch</Patch>
-            <Patch level="1">numpy-1.4.1-remove-PyOS_ascii_strtod.patch</Patch>
-            <Patch level="0">numpy_doublefree.patch</Patch>
+            <Patch level="1">001-fix-test_multiarray.patch</Patch>
+            <Patch level="1">002-fix_PyUnicodeObject.patch</Patch>
+            <Patch level="1">09d2c51fa1d09b17060a8545b925f4dded9dedb1.patch</Patch>
+            <Patch level="1">4234b6b13e3ee9da6fc1c24e9e8c442d77587837.patch</Patch>
+            <Patch level="1">f2ac38f09ff258339ef44572a3abba02019e1f55.patch</Patch>
         </Patches>
     </Source>
 
@@ -43,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="19">
+            <Date>2012-10-13</Date>
+            <Version>1.6.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="18">
             <Date>2010-10-13</Date>
             <Version>1.4.1</Version>
