python-pygobject güncellendi.

--- a/programming/language/python/python-pygobject/pspec.xml
+++ b/programming/language/python/python-pygobject/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Glib bindings for Python</Summary>
         <Description>pygobject is GLib's GObject library bindings for Python.</Description>
-        <Archive sha1sum="d091412760d44477e76ae995125c8fc5a15eae74" type="tarbz2">mirrors://gnome/pygobject/2.26/pygobject-2.26.0.tar.bz2</Archive>
+        <Archive sha1sum="b1749ba806499f4c2780dbd1cbb363aaf1f41e78" type="tarxz">http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.28/pygobject-2.28.6.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>cairo-devel</Dependency>
             <Dependency versionFrom="0.9.5">gobject-introspection-devel</Dependency>
@@ -61,6 +61,15 @@
     </Package>
 
     <History>
+        <Update release="17">
+            <Date>2012-10-14</Date>
+            <Version>2.28.6</Version>
+            <Comment>
+                * Version bump.
+            </Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-28</Date>
             <Version>2.26.0</Version>
