--- a/programming/language/vala/pspec.xml
+++ b/programming/language/vala/pspec.xml
@@ -12,7 +12,7 @@
         <License>BSD</License>
         <Summary>A modern programming language for GNOME</Summary>
         <Description>Vala is a new programming language that aims to bring modern programming language features to GNOME developers without imposing any additional runtime requirements and without using a different ABI compared to applications and libraries written in C.</Description>
-        <Archive sha1sum="e7ac9fa432eedb480827f7664ad1e26f55aaed87" type="tarxz">http://download.gnome.org/sources/vala/0.17/vala-0.17.4.tar.xz</Archive>
+        <Archive sha1sum="1ea1e46064992eaf34be81c06ef1fa8394e32c75" type="tarxz">http://download.gnome.org/sources/vala/0.18/vala-0.18.0.tar.xz</Archive>
     </Source>
 
     <Package>
@@ -60,6 +60,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2012-10-17</Date>
+            <Version>0.18.0</Version>
+            <Comment>Version bump</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="5">
             <Date>2012-08-09</Date>
             <Version>0.17.4</Version>
