gtk-sharp yama eklendi. paketlenir hale getirildi.

--- a/programming/language/dotnet/gtk-sharp/pspec.xml
+++ b/programming/language/dotnet/gtk-sharp/pspec.xml
@@ -19,6 +19,11 @@
             <Dependency versionFrom="2.18.5">gtk2-devel</Dependency>
             <Dependency>atk-devel</Dependency>
         </BuildDependencies>
+	<Patches>
+	    <Patch level="0">glib-fix-01.patch</Patch>
+	    <Patch level="0">glib-fix-02.patch</Patch>
+	    <Patch level="0">glib-fix-03.patch</Patch>
+	</Patches>
     </Source>
 
     <Package>
