libgdiplus: version bump

--- a/programming/language/dotnet/libgdiplus/pspec.xml
+++ b/programming/language/dotnet/libgdiplus/pspec.xml
@@ -12,8 +12,9 @@
         <IsA>library</IsA>
         <Summary>Library for using System.Drawing with Mono</Summary>
         <Description>Libgdiplus is an open source implementation of the GDI+ API. This is part of the Mono project.</Description>
-        <Archive sha1sum="00e546a0acacd9155d9347420440ffe15b19f0d1" type="tarbz2">http://ftp.novell.com/pub/mono/sources/libgdiplus/libgdiplus-2.8.1.tar.bz2</Archive>
+        <Archive sha1sum="5e127b818d9af032928c7f7cfba812c1231a8478" type="tarbz2">http://download.mono-project.com/sources/libgdiplus-1.1/libgdiplus-2.10.9.tar.bz2</Archive>
         <BuildDependencies>
+            <Dependency>jpeg-devel</Dependency>
             <Dependency>tiff-devel</Dependency>
             <Dependency>giflib-devel</Dependency>
             <Dependency>libexif-devel</Dependency>
@@ -21,11 +22,16 @@
             <Dependency>fontconfig-devel</Dependency>
             <Dependency>freetype-devel</Dependency>
         </BuildDependencies>
+        <Patches>
+            <Patch level="1">libgdiplus-2.10.9-gold.patch</Patch>
+            <Patch level="1">libgdiplus-2.10.1-libpng15.patch</Patch>
+        </Patches>
     </Source>
 
     <Package>
         <Name>libgdiplus</Name>
         <RuntimeDependencies>
+            <Dependency>jpeg</Dependency>
             <Dependency>tiff</Dependency>
             <Dependency>giflib</Dependency>
             <Dependency>libexif</Dependency>
@@ -41,6 +47,13 @@
     </Package>
 
     <History>
+        <Update release="25">
+            <Date>2012-10-19</Date>
+            <Version>2.10.9</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="24">
             <Date>2010-11-28</Date>
             <Version>2.8.1</Version>
