--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -5,32 +5,44 @@
         <Name>sun-java</Name>
         <Homepage>https://jdk-distros.dev.java.net</Homepage>
         <Packager>
-            <Name>Pardus ANKA Admins</Name>
-            <Email>pisiciftligi@pardus-linux.org</Email>
+            <Name>Gökhan Özbulak</Name>
+            <Email>gozbulak@pardus.org.tr</Email>
         </Packager>
         <License>dlj-1.1</License>
         <IsA>app:console</IsA>
         <IsA>library</IsA>
         <Summary>Sun's Java Runtime Environment for Standard Edition</Summary>
         <Description>This package provides Java Runtime Environment that is necessary to run the programs written in Java.</Description>
-        <!-- We need new location for dummy file. -->
+        <!--Archive sha1sum="" type="binary" target="i686">http://download.oracle.com/otn-pub/java/jdk/6u37-b06/jdk-6u37-linux-i586.bin</Archive>
+        <Archive sha1sum="" type="binary" target="x86_64">http://download.oracle.com/otn-pub/java/jdk/6u37-b06/jdk-6u37-linux-x64.bin</Archive-->
         <Archive sha1sum="06e0357207c18202f7fea04df5570de1845ddd28" type="binary">http://pakete.pardususer.de/source-files/dummy.zip</Archive>
         <AdditionalFiles>
-            <AdditionalFile permission="0644" target="i586.sha1sum">jdk-8-ea-bin-b61-linux-i586-18_oct_2012.tar.gz.sha1sum</AdditionalFile>
-            <AdditionalFile permission="0644" target="x64.sha1sum">jdk-8-ea-bin-b61-linux-x64-18_oct_2012.tar.gz.sha1sum</AdditionalFile>
+            <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>
+            <AdditionalFile permission="0644" target="i586.sha1">jdk-6u37-linux-i586.bin.sha1</AdditionalFile>
+            <AdditionalFile permission="0644" target="x64.sha1">jdk-6u37-linux-x64.bin.sha1</AdditionalFile>
             <!-- For no downloading binary file every time you run pisi bi
                  place appropriate binary in files folder and uncomment one from below lines.
-            <AdditionalFile permission="0644" target="jdk-8-ea-bin-b61-linux-i586-18_oct_2012.tar.gz">jdk-8-ea-bin-b61-linux-i586-18_oct_2012.tar.gz</AdditionalFile>
-            <AdditionalFile permission="0644" target="jdk-8-ea-bin-b61-linux-x64-18_oct_2012.tar.gz">jdk-8-ea-bin-b61-linux-x64-18_oct_2012.tar.gz/AdditionalFile>
+            <AdditionalFile permission="0644" target="jdk-6u37-linux-i586.bin">jdk-6u34-linux-i586.bin</AdditionalFile>
+            <AdditionalFile permission="0644" target="jdk-6u37-linux-x64.bin">jdk-6u34-linux-x64.bin</AdditionalFile>
             -->
         </AdditionalFiles>
-        <!--BuildDependencies>
-        </BuildDependencies-->
+        <BuildDependencies>
+            <Dependency>alsa-lib</Dependency>
+            <Dependency>unixODBC</Dependency>
+            <Dependency>libXext</Dependency>
+            <Dependency>libXi</Dependency>
+            <Dependency>libXtst</Dependency>
+        </BuildDependencies>
     </Source>
 
     <Package>
         <Name>sun-jre</Name>
         <RuntimeDependencies>
+            <Dependency>alsa-lib</Dependency>
+            <Dependency>unixODBC</Dependency>
+            <Dependency>libXext</Dependency>
+            <Dependency>libXi</Dependency>
+            <Dependency>libXtst</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/opt/sun-jdk/jre/bin</Path>
@@ -93,6 +105,7 @@
         </Files>
     </Package>
 
+<!--
     <Package>
         <Name>sun-jdk-samples</Name>
         <Summary>Sample files for Sun's Java platform</Summary>
@@ -104,7 +117,7 @@
             <Path fileType="data">/opt/sun-jdk/sample</Path>
         </Files>
     </Package>
-
+-->
     <Package>
         <Name>sun-jdk-doc</Name>
         <Summary>Documentation files for Apache Derby database engine</Summary>
@@ -122,9 +135,9 @@
 
     <History>
         <Update release="37">
-            <Date>2012-10-21</Date>
-            <Version>1.8.0</Version>
-            <Comment>New release</Comment>
+            <Date>2012-10-22</Date>
+            <Version>1.6.0_p37</Version>
+            <Comment>Version bump</Comment>
             <Name>Marcin Bojara</Name>
             <Email>marcin.bojara@gmail.com</Email>
         </Update>
