--- a/programming/language/python/pyparted/pspec.xml
+++ b/programming/language/python/pyparted/pspec.xml
@@ -12,14 +12,11 @@
         <IsA>library</IsA>
         <Summary>Python bindings for parted</Summary>
         <Description>pyparted is the python module which enables to use GNU Parted package from python. Using python with this module, programmers can create, destroy, resize, check and copy partitions, and the file systems on them.</Description>
-        <Archive sha1sum="8c97f5870313bb25f4e17a914fd6d59c4d338c51" type="targz">https://fedorahosted.org/releases/p/y/pyparted/pyparted-3.4.tar.gz</Archive>
+        <Archive sha1sum="4d11482a4de7ec6962dfbb36a67965bd35b0daf6" type="targz">https://fedorahosted.org/releases/p/y/pyparted/pyparted-3.8.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-decorator</Dependency>
             <Dependency versionFrom="2.3">parted-devel</Dependency>
         </BuildDependencies>
-        <Patches>
-            <Patch level="1">fix_pycompile.patch</Patch>
-        </Patches>
     </Source>
 
     <Package>
@@ -35,6 +32,13 @@
     </Package>
 
     <History>
+        <Update release="14">
+            <Date>2012-10-24</Date>
+            <Version>3.8</Version>
+            <Comment>Version bump</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>      
         <Update release="13">
             <Date>2010-10-13</Date>
             <Version>3.4</Version>
