--- a/programming/language/python/python-gtksourceview/pspec.xml
+++ b/programming/language/python/python-gtksourceview/pspec.xml
@@ -17,7 +17,7 @@
             <Dependency>python-gtk-devel</Dependency>
             <Dependency>gtk-doc</Dependency>
             <Dependency>gtk2-devel</Dependency>
-            <Dependency>gtksourceview-devel</Dependency>
+            <Dependency>gtksourceview3-devel</Dependency>
             <Dependency>docbook-xml</Dependency>
             <Dependency releaseFrom="16">python-pygobject-devel</Dependency>
         </BuildDependencies>
@@ -31,7 +31,7 @@
         <RuntimeDependencies>
             <Dependency>python-gtk</Dependency>
             <Dependency>gtk2</Dependency>
-            <Dependency>gtksourceview</Dependency>
+            <Dependency>gtksourceview3</Dependency>
             <Dependency releaseFrom="16">python-pygobject</Dependency>
         </RuntimeDependencies>
         <Files>
