--- a/programming/language/perl/perl-Glib/pspec.xml
+++ b/programming/language/perl/perl-Glib/pspec.xml
@@ -12,15 +12,15 @@
         <IsA>library</IsA>
         <Summary>Perl wrappers for the GLib utility and Object libraries</Summary>
         <Description>This module provides perl access to Glib and GLib's GObject libraries. GLib is a portability and utility library; GObject provides a generic type system with inheritance and a powerful signal system. Together these libraries are used as the foundation for many of the libraries that make up the Gnome environment, and are used in many unrelated projects.</Description>
-        <Archive sha1sum="6d93f603ea7b7054502c46df8e138e89fb067b0e" type="targz">http://search.cpan.org/CPAN/authors/id/X/XA/XAOC/Glib-1.260.tar.gz</Archive>
+        <Archive sha1sum="32745ebc97817c4be162efed7824cd469e191479" type="targz">http://search.cpan.org/CPAN/authors/id/T/TS/TSCH/Glib-1.262.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-ExtUtils-Depends</Dependency>
             <Dependency>perl-ExtUtils-PkgConfig</Dependency>
             <Dependency version="5.16.1">perl</Dependency>
         </BuildDependencies>
-        <Patches>
+        <!--<Patches>
             <Patch>Glib-1.210-exception-trapping.patch</Patch>
-        </Patches>
+        </Patches>-->
     </Source>
 
     <Package>
@@ -39,6 +39,13 @@
     </Package>
 
     <History>
+        <Update release="11">
+            <Date>2012-10-28</Date>
+            <Version>1.262</Version>
+            <Comment>Güncellendi.</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>namso-01@hotmail.it</Email>
+        </Update>
         <Update release="10">
             <Date>2012-09-06</Date>
             <Version>1.260</Version>
