perl-switch sınama aşaması aktif edildi, yamalandı.

--- a/programming/language/perl/perl-switch/pspec.xml
+++ b/programming/language/perl/perl-switch/pspec.xml
@@ -16,6 +16,9 @@
         <BuildDependencies>
             <Dependency version="5.16.1">perl</Dependency>
         </BuildDependencies>
+	<Patches>
+	    <Patch level="1">Switch-2.16-perl514.patch</Patch>
+	</Patches>
     </Source>
 
     <Package>
