--- a/programming/language/python/python-sphinx/pspec.xml
+++ b/programming/language/python/python-sphinx/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Python documentation generator. It can generate HTML or Latex outputs</Summary>
         <Description>It's a very common documentation generator especially using for python based documentation.It can generate HTML or PDF, Ps outputs with Latex output support.</Description>
-        <Archive sha1sum="92f422474e43345ab69dedceeedfd7d18c55da2d" type="targz">http://pypi.python.org/packages/source/S/Sphinx/Sphinx-1.1.2.tar.gz</Archive>
+        <Archive sha1sum="6beb30f18ffac3de7689b7fd63e9a8a7d9c8df3a" type="targz">http://pypi.python.org/packages/source/S/Sphinx/Sphinx-1.1.3.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>docutils</Dependency>
             <Dependency>python-Pygments</Dependency>
@@ -46,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="14">
+            <Date>2012-10-29</Date>
+            <Version>1.1.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>      
         <Update release="13">
             <Date>2011-11-10</Date>
             <Version>1.1.2</Version>
